[project]
name = "arsmedicatech-nanoservices"
version = "0.1.0"
description = "Nano services for arsmedicatech"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3-stubs[textract]>=1.40.55",
    "colorama>=0.4.6",
    "cryptography>=46.0.3",
    "exceptiongroup>=1.3.0",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.75.1",
    "grpcio-tools>=1.75.1",
    "openai>=2.5.0",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "protobuf>=6.33.0",
    "pygments>=2.19.2",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "surrealdb>=1.0.6",
    "tomli>=2.3.0",
    "typing-extensions>=4.15.0",
    "werkzeug>=3.1.3",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"amt_nano" = ["py.typed"]
